# implementation

adk/: setup.py
agents copy/: CHA_IMPLEMENTATION_REPORT.md  COMPREHENSIVE_INTEGRATION_ANALYSIS.md  DHA_IMPLEMENTATION_REPORT.md  INTEGRATION_SUMMARY.md  MIGRATIONS.md  MODULARIZATION_GUIDE.md  Makefile  NPV_IMPLEMENTATION_README.md  README.md  README_ENHANCED.md  Technikkatalog_Wärmeplanung_Version_1.1_August24_CC-BY.xlsx  agents.py  analyze_building_demands.py  analyze_load_profile_usage.py  apply_fix.py  config_DH_run.yaml  config_interactive_run.yaml  demo_enhanced_system.py  energy_tools.py  enhanced_agents.py  enhanced_agents_adk.py  enhanced_agents_backup.py  enhanced_energy_tools.py  enhanced_tools_with_physics.py  extract_street_buildings.py  fix_return_segments.patch  graph2.py  integrate_npv_with_dh_system.py  integrate_npv_with_dh_system_old.py  pyproject.toml  requirements.txt  run_agent_system.py  run_all_test.yaml  run_enhanced_agent_system_adk.py  run_enhanced_agent_system_backup.py  run_enhanced_agent_system_improved.py  run_simple_enhanced_system.py  scenarios_hp.yaml  setup_enhanced_system.py  show_building_demands.py  (+9 more)
agents copy/configs/: apa.yml  apa_test2.yml  caa.yml  caa_test.yml  catalog_map.yml  cha.yml  data16122024_mapping.yml  eaa.yml  etl_data16122024.yml  expose_compliance.yml  lfa.yml  pca.yml  pipe_catalog_mapping.yaml  report.yml  tca.yml
agents copy/econ/: monte_carlo.py
agents copy/etl/: data16122024_to_lfa.py  graph_utils.py
agents copy/lfa/: interface.py
agents copy/optimize/: cost_models.py  diameter_optimizer.py  diameter_optimizer.py.bak  diameter_optimizer_backup.py  en13941_checks.py  per_seg.py  physics_models.py  reporting.py
agents copy/scenarios/: buildings_base_dh.geojson  buildings_full_hp.geojson  buildings_low_temp_dh.geojson
agents copy/schemas/: kpi_summary.schema.json  lfa_demand.schema.json
agents copy/scripts/: analyze_performance.py  audit_expose_compliance.py  build_pipe_catalog.py  generate_sample_data.py  validate_json.py
agents copy/src/: apa.py  building_mapping.py  caa.py  caa_test.py  cha_timeseries.py  dha.py  dha_adapter.py  dha_heuristic.py  dha_pandapower.py  eaa.py  g5_load_profile_generator.py  h0_load_profile_generator.py  h0_profile_validator.py  lfa_adapter.py  lv_feeder_analyzer.py  lv_feeder_analyzer.py.bak  npv_dh_integration.py  npv_pipe_optimizer.py  pipe_catalog_extractor.py  report_composer.py  simulation_runner.py  tca.py
agents copy/templates/: report.md.j2
agents copy/tests/: pp_factories.py  test_CHA_timeseries_integration.py  test_DHA_heuristic.py  test_apa_sensitivity.py  test_benchmark_agfw_ffe_smoke.py  test_cli_flags_present.py  test_cost_models.py  test_deltaT_min_custom.py  test_eaa_mc.py  (+33 more)
(+886 files in other folders)
